# hyv.icp

./: .gitignore  .ic-assets.json5  PRD.md  README.md  baba.md  dfx.json  dfx_backup.json  package-lock.json  package.json  requirements.txt  resumable_upload_models.py  upload_codet5_model.py  upload_distilgpt2_model.py  upload_models.py  upload_single_model.py
docs/: HYV PRD.md  Hyv_AI_Engine.md  PRD.md  Synthetic Data Marketplace Steps.md
scripts/: build_ai_engine.sh  convert_models.py  convert_models_fixed.py  generator_worker.py
src/declarations/hyv_ai_engine/: hyv_ai_engine.did  index.d.ts  index.js
src/declarations/hyv_backend/: hyv_backend.did  index.d.ts  index.js
src/declarations/hyv_frontend/: index.d.ts  index.js
src/declarations/hyv_generator/: hyv_generator.did  index.d.ts  index.js
src/hyv_ai_engine/: Cargo.toml
src/hyv_ai_engine/src/: lib.rs
src/hyv_backend/: hyv_generator.mo  main.mo  model_marketplace.mo
src/hyv_frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js  vite.config.js.timestamp-1755537078768-5b4e285095bb5.mjs
src/hyv_frontend/landing/: package.json  pnpm-lock.yaml
src/hyv_frontend/landing/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/hyv_frontend/landing/public/: sw.js
src/hyv_frontend/src/: App.jsx  App_new.jsx  index.css  index.css.map  main.jsx
src/hyv_frontend/src/components/: GenerationPage.jsx  InternetIdentityLogin.css  InternetIdentityLogin.jsx  LandingPage.css  LandingPage.jsx  Marketplace.jsx  ModelGrid.jsx  ModelSearch.jsx  (+1 more)
src/hyv_generator/: main.mo
