[package]
name = "hyv_ai_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "hyv_ai_engine"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.14"
candid = "0.10"
tract-onnx = { git = "https://github.com/sonos/tract", rev = "2a2914ac29390cc08963301c9f3d437b52dd321a" }
ic-stable-structures = "0.6"
ic-wasi-polyfill = "0.4.1"
anyhow = "1.0"
bytes = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
